# service-template

./: .dockerignore  Cargo.toml  Dockerfile  README.md  renovate.json
.github/workflows/: ci.yaml
src/: app.rs  env.rs  main.rs  server.rs  telemetry.rs
src/app/: health.rs
