[package]
name = "service-template"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["http2"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.6", features = ["catch-panic", "trace", "request-id", "sensitive-headers"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
